[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/thanks/Credits.gd" type="Script" id=1]
[ext_resource path="res://addons/thanks/CreditLine.tscn" type="PackedScene" id=2]

[node name="Credits" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CreditsScrollContainer" type="ScrollContainer" parent="."]
offset_right = 512.0
offset_bottom = 300.0
scroll_vertical = 104

[node name="CreditsLinesContainer" type="VBoxContainer" parent="CreditsScrollContainer"]
offset_top = -104.0
offset_right = 500.0
offset_bottom = 684.0
size_flags_horizontal = 3

[node name="CreditLine" parent="CreditsScrollContainer/CreditsLinesContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 500.0
offset_bottom = 14.0
text = "[center]Credits[/center]"
text = "Credits"
